--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,8 @@
     --white: #fff;
     --black: #000;
     --background: #fdfdfd;
+    --dark-bg: #202020;
+    --purple: rgb(91, 10, 91);
 }
 
 /* =================
@@ -26,7 +28,7 @@ body {
 }
 
 /* =================
-Header and Nav
+Header and Nav and Links
    ================= */
 nav {
     display: flex;
@@ -46,6 +48,18 @@ li {
     padding: 0 1em 0 0;
 }
 
+a,
+a:active {
+    text-decoration: none;
+    color: inherit
+}
+
+a:hover,
+a:focus {
+    color: var(--purple);
+    text-decoration: underline;
+}
+
 .logo {
     width: 60%;
     max-width: 400px;
@@ -59,6 +73,7 @@ li {
     height: 300px;
     background-image: url(images/dog-cat-3.png);
     background-size: cover;
+    background-position: 70% 20%;
     display: flex;
     align-items: end;
 }
@@ -86,10 +101,69 @@ li {
 .post {
     margin: 1.5em 0;
 }
+
 .post-image {
     width: 100%;
     margin-bottom: 1em;
 }
+
+.read-more {
+    margin-top: 1em;
+    font-style: italic;
+    text-decoration: underline;
+}
+
+.recent-posts {
+    text-align: center;
+}
+
+/* =================
+    About page
+   ================= */
+.about-img {
+    width: 180px;
+    border-radius: 50%;
+    border: 4px solid var(--purple);
+}
+
+.about-post-title {
+    font-size: 2rem;
+    color: var(--black);
+    margin-bottom: .5em;
+}
+
+.about-top {
+    padding: 1em;
+}
+
+.about-post-text {
+    padding: 1em 0 0;
+}
+
+.about-posts {
+    padding: 1em;
+}
+
+.about-post:not(:first-child) {
+    margin: 1.5em 0;
+}
+/* =================
+    Footer
+   ================= */
+
+   footer {
+    background-color: var(--dark-bg);
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   }
+
+   .footer-text {
+    color: var(--white);
+    font-weight: 200;
+    font-size: 0.75rem;
+   }
 
 /* =================
     Media queries
@@ -98,5 +172,9 @@ li {
 @media (min-width: 576px) {
     .main-post {
         height: 500px;
+    }
+
+    li {
+        font-size: 1.25rem;
     }
 }
